# ymap-auto-markup

./: .gitignore  script.js
find_edges/: CMakeLists.txt  find_edges.cpp  vec.h
labeler-app/: README.md  affine.py  correct_results.py  data_storage.py  generate_task.py  index.html  load_data.js  map.html  metric.py  modeling.py  polygon_matching.py  result_storage.py  script.js  server.py  statistics.py  user_storage.py  user_tasks.py
labeler-app/cgi-bin/: daemon.py  load_data.py  load_map_html.py  login.py  save.py  storage.py  view_data.py
labeler-app/data/: linear.model  linear.params  trees.model
labeler-app/data/statistics/: task_to_users.json  transform_stat.json  user_stat.json
labeler-app/poly_match/: CMakeLists.txt  Makefile  gen_json_examples.py  metric.cpp  metric.py  poly_match.cpp  poly_match.hpp  test.cpp  test.py
labeler-app/poly_match/json_examples/: gen.json  real.json
labeler-app/static/: map.js
labeler-app/templates/: finish.html  home.html  layout.html  login.html  map.html  register.html
labeler-app/templates/includes/: _formhelpers.html
report/: ymaprica.tex
superv-house-detect/: circle_desc.py  circle_descriptor.py  cut.py  features.py  find_lines.py  generate_dataset.py  hist.pl  hog_dataset.py  line_segment_detect.py  mcg.py  ncut.ipynb  nn.py  normalization.py  normalized_cut.py  oblivious_tree.py  preprocess_data.py  sign_dist_trans.py  test_hog.py  utils.py
superv-house-detect/cpp_ottree/: Makefile  tree.cpp  tree.h
superv-house-detect/descriptors/: Makefile  circle_desc.cpp  circle_desc.hpp  test.py
superv-house-detect/torch/: dataLoader.py  inception_layers.py  segnet.py  segnet_apply.py  vgg.lua
unsuperv-house-detect/: CMakeLists.txt
unsuperv-house-detect/src/: main.cpp  orb.py  segm.py  sift.py
